--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "version": "1.0.0",
     "description": "contains of 2 tasks",
     "scripts": {
-        "testTask1": "node out/test.js"
+        "testTask1": "npx ts-node task1/test.ts",
+        "testTask2": "npx ts-node task2/test.ts"
     },
     "author": "kirill",
     "license": "ISC",
     "dependencies": {
+        "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     }
 }
