--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
     "name": "test-bear-head-studio",
     "version": "1.0.0",
-    "description": "contains of 2 tasks",
+    "description": "contains of 3 tasks",
     "scripts": {
         "testTask1": "npx ts-node task1/test.ts",
-        "testTask2": "npx ts-node task2/test.ts"
+        "testTask2": "npx ts-node task2/test.ts",
+        "testTask3": "npx ts-node task3/test.ts",
+        "startTask3": "react-scripts start"
     },
     "author": "kirill",
     "license": "ISC",
     "dependencies": {
+        "@types/react": "^18.2.25",
+        "@types/react-dom": "^18.2.11",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "^5.0.1",
         "ts-node": "^10.9.1",
-        "typescript": "^5.2.2"
+        "typescript": "^4.9.5"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
